tests/errors/combine_consecutive_unsets.php
<?php

declare(strict_types=1);

unset($a);
unset($b);
